--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
      <section class="sec-1">
-       
     <header>
         <h2>MideLux</h2>
          <input type="checkbox" name="" id="check">
@@ -19,7 +18,7 @@
             <a href="Rooms.html">Rooms</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="">FAQ</a>
+            <a href="FAQ.html">FAQ</a>
         </nav>
     </header>
         <div class="overlay-wrapper">
