--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <a href="Rooms.html">Rooms</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="">FAQ</a>
+            <a href="FAQ.html">FAQ</a>
         </nav>
     </header>
         <div class="overlay-wrapper">
