--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <a href="Rooms.html">Rooms</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="">FAQ</a>
+            <a href="FAQ.html">FAQ</a>
         </nav>
     </header>
         <div class="overlay-wrapper">
@@ -36,6 +36,34 @@
             <input class="subject" type="text" placeholder="Enter Subject">
         </div>
         <button class="btn" type="submit">Send</button>
+    </div>
+    <div class="reserve-container">
+        <p class="reserve">For Reservation Or Query?</p>
+        <button class="reserve-btn">+234 903 551 8324</button>
+    </div>
+    <div class="footer-container">
+        <div class="box">
+            <div class="address">
+                <h2>Address</h2>
+                <p>Muslim Community, Ibadan, Oyo State, Nigeria</p>
+                <p>Get Direction</p>
+            </div>
+            <div class="reservation">
+                <h2>Reservation</h2>
+                <p>+234 903 551 8324</p>
+                <p>ayanlajabaliqiz@gmail.com</p>
+            </div>
+            <div>
+                <h2>Navigation</h2>
+                <p>Home</p>
+                <p>Rooms</p>
+                <p>About</p>
+                <p>Contact</p>
+                <p>FAQ</p>
+            </div>
+        </div>
+        <hr>
+        <p class="footer-p">Copyright @2025 All right reserved. This template is made with 💖 by <a style="color: blue;">Baliqiz.</a></p>
     </div>
 </body>
 </html>
